# rmSafe

./: CMakeLists.txt  README.md  main.cpp  project.txt  rmSafe
build_linux/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt  rmsafe-1.0.0-Linux.deb  rmsafe-1.0.0-Linux.rpm
build_linux/_CPack_Packages/Linux/DEB/rmsafe-1.0.0-Linux/: control  md5sums
build_linux/_CPack_Packages/Linux/RPM/: rpmbuildrmsafe.err  rpmbuildrmsafe.out
build_linux/_CPack_Packages/Linux/RPM/SPECS/: rmsafe.spec
scripts/: setup_alias_linux.sh  setup_alias_windows.ps1
